test_regress/t/t_constraint_global_arr_unsup.out
%Error-UNSUPPORTED: t/t_constraint_global_arr_unsup.v:41:20: Unsupported: Array element access in global constraint 
   41 |     m_mid.m_arr[0].m_x == 200;
      |                    ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_constraint_global_arr_unsup.v:42:20: Unsupported: Array element access in global constraint 
   42 |     m_mid.m_arr[0].m_y == 201;
      |                    ^~~
%Error-UNSUPPORTED: t/t_constraint_global_arr_unsup.v:47:24: Unsupported: Array element access in global constraint 
   47 |     m_mid_arr[0].m_obj.m_x == 300;
      |                        ^~~
%Error-UNSUPPORTED: t/t_constraint_global_arr_unsup.v:47:18: Unsupported: Array element access in global constraint 
   47 |     m_mid_arr[0].m_obj.m_x == 300;
      |                  ^~~~~
%Error-UNSUPPORTED: t/t_constraint_global_arr_unsup.v:48:24: Unsupported: Array element access in global constraint 
   48 |     m_mid_arr[0].m_obj.m_y == 301;
      |                        ^~~
%Error-UNSUPPORTED: t/t_constraint_global_arr_unsup.v:48:18: Unsupported: Array element access in global constraint 
   48 |     m_mid_arr[0].m_obj.m_y == 301;
      |                  ^~~~~
%Error-UNSUPPORTED: t/t_constraint_global_arr_unsup.v:53:27: Unsupported: Array element access in global constraint 
   53 |     m_mid_arr[1].m_arr[2].m_y == 400;
      |                           ^~~
%Error-UNSUPPORTED: t/t_constraint_global_arr_unsup.v:53:18: Unsupported: Array element access in global constraint 
   53 |     m_mid_arr[1].m_arr[2].m_y == 400;
      |                  ^~~~~
%Error: Exiting due to
